force-app/main/default/objects/Contact/fields/ABI_2022_attendee__c.field-meta.xml
<CustomField>
    <fullName>ABI_2022_attendee__c</fullName>
    <label>ABI 2022 attendee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>