force-app/main/default/objects/Contact/fields/ABI_2022_invitee__c.field-meta.xml
<CustomField>
    <fullName>ABI_2022_invitee__c</fullName>
    <label>ABI 2022 invitee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>