force-app/main/default/objects/Contact/fields/ABI_23_Attendee__c.field-meta.xml
<CustomField>
    <fullName>ABI_23_Attendee__c</fullName>
    <label>ABI 23 Attendee?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>