force-app/main/default/objects/Contact/fields/ABI_Speaker_Committee__c.field-meta.xml
<CustomField>
    <fullName>ABI_Speaker_Committee__c</fullName>
    <label>ABI Speaker / Committee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>