force-app/main/default/objects/Contact/fields/Assistantemail__c.field-meta.xml
<CustomField>
    <fullName>Assistantemail__c</fullName>
    <label>Assistantemail</label>
    <type>Email</type>
</CustomField>