force-app/main/default/objects/Contact/fields/Assistantphone__c.field-meta.xml
<CustomField>
    <fullName>Assistantphone__c</fullName>
    <label>Assistantphone</label>
    <type>Phone</type>
</CustomField>