force-app/main/default/objects/Contact/fields/BusinessPhone__c.field-meta.xml
<CustomField>
    <fullName>BusinessPhone__c</fullName>
    <label>BusinessPhone</label>
    <type>Phone</type>
</CustomField>