force-app/main/default/objects/Contact/fields/CC_ASST_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_ASST_Email_Address__c</fullName>
    <label>CC/ ASST Email Address</label>
    <type>Email</type>
</CustomField>