force-app/main/default/objects/Contact/fields/CompanyURL__c.field-meta.xml
<CustomField>
    <fullName>CompanyURL__c</fullName>
    <label>CompanyURL</label>
    <type>Url</type>
</CustomField>