force-app/main/default/objects/Contact/fields/H_index__c.field-meta.xml
<CustomField>
    <fullName>H_index__c</fullName>
    <label>H-index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>