force-app/main/default/objects/Contact/fields/HomeCity__c.field-meta.xml
<CustomField>
    <fullName>HomeCity__c</fullName>
    <label>HomeCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>