force-app/main/default/objects/Contact/fields/HomeCountry__c.field-meta.xml
<CustomField>
    <fullName>HomeCountry__c</fullName>
    <label>HomeCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>