force-app/main/default/objects/Contact/fields/HomeState__c.field-meta.xml
<CustomField>
    <fullName>HomeState__c</fullName>
    <label>HomeState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>