force-app/main/default/objects/Contact/fields/HomeStreet2__c.field-meta.xml
<CustomField>
    <fullName>HomeStreet2__c</fullName>
    <label>HomeStreet2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>