force-app/main/default/objects/Contact/fields/HomeStreet3__c.field-meta.xml
<CustomField>
    <fullName>HomeStreet3__c</fullName>
    <label>HomeStreet3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>