force-app/main/default/objects/Contact/fields/HomeStreet__c.field-meta.xml
<CustomField>
    <fullName>HomeStreet__c</fullName>
    <label>HomeStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>