force-app/main/default/objects/Contact/fields/HomeZip__c.field-meta.xml
<CustomField>
    <fullName>HomeZip__c</fullName>
    <label>HomeZip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>