force-app/main/default/objects/Contact/fields/ImportBy__c.field-meta.xml
<CustomField>
    <fullName>ImportBy__c</fullName>
    <label>ImportBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>