force-app/main/default/objects/Contact/fields/Location_Country__c.field-meta.xml
<CustomField>
    <fullName>Location_Country__c</fullName>
    <label>Location Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>