force-app/main/default/objects/Contact/fields/Location_State__c.field-meta.xml
<CustomField>
    <fullName>Location_State__c</fullName>
    <label>Location State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>