force-app/main/default/objects/Contact/fields/PrimaryCity__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCity__c</fullName>
    <label>PrimaryCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>