force-app/main/default/objects/Contact/fields/PrimaryCountry__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCountry__c</fullName>
    <label>PrimaryCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>