force-app/main/default/objects/Contact/fields/PrimaryState__c.field-meta.xml
<CustomField>
    <fullName>PrimaryState__c</fullName>
    <label>PrimaryState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>