force-app/main/default/objects/Contact/fields/PrimaryStreet2__c.field-meta.xml
<CustomField>
    <fullName>PrimaryStreet2__c</fullName>
    <label>PrimaryStreet2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>