force-app/main/default/objects/Contact/fields/PrimaryStreet3__c.field-meta.xml
<CustomField>
    <fullName>PrimaryStreet3__c</fullName>
    <label>PrimaryStreet3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>