force-app/main/default/objects/Contact/fields/PrimaryStreet__c.field-meta.xml
<CustomField>
    <fullName>PrimaryStreet__c</fullName>
    <label>PrimaryStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>