force-app/main/default/objects/Contact/fields/PrimaryZip__c.field-meta.xml
<CustomField>
    <fullName>PrimaryZip__c</fullName>
    <label>PrimaryZip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>