force-app/main/default/objects/Contact/fields/Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>