force-app/main/default/objects/Contact/fields/Tel_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Tel_Mobile__c</fullName>
    <label>Tel Mobile</label>
    <type>Phone</type>
</CustomField>