force-app/main/default/objects/Contact/fields/Tel_Office__c.field-meta.xml
<CustomField>
    <fullName>Tel_Office__c</fullName>
    <label>Tel Office</label>
    <type>Phone</type>
</CustomField>