force-app/main/default/objects/Contact/fields/Title_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Title_Suffix__c</fullName>
    <label>Title Suffix</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFA</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>DVM</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>EMBA</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>JD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>