force-app/main/default/objects/Contact/validationRules/Suffix_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Suffix_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(BEGINS(Suffix, &quot;, &quot;))</errorConditionFormula>
    <errorMessage>The suffix field must always start with a comma and a space (i.e. &quot;, Sr.&quot; or &quot;, Jr.&quot;)</errorMessage>
</ValidationRule>